--- a/src/main/resources/templates/reservation_summary.html
+++ b/src/main/resources/templates/reservation_summary.html
@@ -48,18 +48,10 @@
                         <a href="/users" class="nav-link px-0 align-middle">
                             <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Sprava uzivatelu</span></a>
                     </li>
-                    <!--<li>
-                        <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
-                            <i class="fs-4 bi-bootstrap"></i> <span class="ms-1 d-none d-sm-inline">Bootstrap</span></a>
-                        <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
-                            <li class="w-100">
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 1</a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 2</a>
-                            </li>
-                        </ul>
-                    </li> -->
+                    <li sec:authorize="hasAnyRole('ADMIN', 'READER', 'LIBRARIAN')">
+                        <a href="/votes" class="nav-link px-0 align-middle">
+                            <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline"> Hlasovani</span></a>
+                    </li>
                 </ul>
                 <hr>
                 <div class="dropdown pb-4" sec:authorize="isAuthenticated()">
@@ -91,6 +83,7 @@
                     <th>Od</th>
                     <th>Do</th>
                     <th>Stav</th>
+                    <th>Akce</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -104,6 +97,13 @@
                         <span th:case="true">Vypujceno</span>
                         <span th:case="*">Nevraceno</span>
                     </td>
+                    <td>
+                        <a th:if="${reservation.extendPossible == true}" th:href="@{/reservationExtend(reservation_id=${reservation.id})}">
+                            <button class="btn btn-primary">Prodlouzit</button>
+                        </a>
+
+                        <button th:if="${reservation.extendPossible == false}" class="btn btn-warning" disabled>Nelze prodlouzit</button>
+                    </td>
                 </tr>
                 </tbody>
                 <tfoot>
@@ -113,6 +113,7 @@
                     <th>Od</th>
                     <th>Do</th>
                     <th>Stav</th>
+                    <th>Akce</th>
                 </tr>
                 </tfoot>
             </table>
