--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -49,7 +49,11 @@
                         </li>
                         <li sec:authorize="hasAnyRole('ADMIN', 'READER', 'LIBRARIAN')">
                             <a href="/votes" class="nav-link px-0 align-middle">
-                                <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline"> Hlasovani</span></a>
+                                <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Hlasovani</span></a>
+                        </li>
+                        <li sec:authorize="hasAnyRole('ADMIN', 'LIBRARIAN')">
+                            <a href="/reservations/createLoan" class="nav-link px-0 align-middle">
+                                <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Vypujcka</span></a>
                         </li>
                         <!--<li>
                             <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
