--- a/src/main/resources/templates/createLoan.html
+++ b/src/main/resources/templates/createLoan.html
@@ -6,6 +6,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
@@ -78,8 +80,9 @@
             <form th:action="@{/reservations/createLoan}" method="POST" th:object="${reservation}">
                 <div class="row">
                     <div class="col-sm-4">
-                        <input type="text" class="form-control" placeholder="ID knihy" th:name="book_id"
-                               th:field="*{bookId}"/>
+                        <select class="book_search" th:name="readers" th:field="*{bookId}">
+                            <option th:each="book : ${availableBooks}" th:value="${book.id}" th:text="${book.id + ' - ' + book.name}"/>
+                        </select>
                     </div>
                     <div class="col-sm-4">
                         <select class="reader_search" th:name="readers" th:field="*{personId}">
@@ -97,6 +100,10 @@
 </div>
 </body>
 <script>
+    $('.reader_search').select2();
+    $('.reader_search').trigger('change');
 
+    $('.book_search').select2();
+    $('.book_search').trigger('change');
 </script>
 </html>
