--- a/src/main/resources/templates/titles.html
+++ b/src/main/resources/templates/titles.html
@@ -47,6 +47,10 @@
                         <a href="/users" class="nav-link px-0 align-middle">
                             <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Sprava uzivatelu</span></a>
                     </li>
+                    <li sec:authorize="hasAnyRole('ADMIN', 'LIBRARIAN')">
+                        <a href="/reservations/createLoan" class="nav-link px-0 align-middle">
+                            <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Vypujcka</span></a>
+                    </li>
                 </ul>
                 <hr>
                 <div class="dropdown pb-4" sec:authorize="isAuthenticated()">
